# wallabmc

./: .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kconfig  LICENSE-DOCS  LICENSE_understanding.txt  NOTICE  README.md  README.rst  SECURITY.md  app.overlay  prj.conf  sections-rom.ld  sysbuild.conf  west.yml
.github/: spdx-ignore.yaml
.github/workflows/: build.yml  dco-check.yml  spdx.yml
boards/: hifive_premier_p550_mcu.conf  hifive_premier_p550_mcu.overlay  nucleo_f767zi.conf  nucleo_f767zi.overlay  qemu_cortex_m3.conf  sifive_hifive_premier_p550.conf  sifive_hifive_premier_p550.overlay
boards/sifive/hifive_premier_p550_mcu/: Kconfig.defconfig  Kconfig.hifive_premier_p550_mcu  P550_BMC_HARDWARE.md  board.cmake  board.yml  hifive_premier_p550_mcu.dts  hifive_premier_p550_mcu.yaml  hifive_premier_p550_mcu_defconfig
boards/sifive/hifive_premier_p550_mcu/doc/: hardware.rst  index.rst
boards/sifive/hifive_premier_p550_mcu/support/: README.md
cmake/: gen_git_sha.cmake
scripts/: check_signoff.py  get_project_git_sha.sh  run_qemu_ci.py
src/: button.c  button.h  certificate.h  config.c  config.h  console_bridge.c  console_bridge.h  console_bridge_ws.c  console_bridge_ws.h  console_logger.c  console_logger.h  dhcp.c  dhcp.h  fs.c  fs.h  host.c  host.h  http.c  http.h  jtag.c  jtag.h  main.c  main.h  net.c  net.h  ntp.c  ntp.h  power.c  power.h  redfish.c  redfish.h  rtc.c  rtc.h  sensors.c  sensors.h  synch.c  synch.h  vpd.c  vpd.h  web.c
src/certs/: ca_cert.pem  ca_privkey.pem  gen_ca_cert.sh  gen_server_cert.sh  server_cert.der  server_cert.pem  server_csr.ext  server_csr.pem  server_privkey.der  server_privkey.pem
static_web_resources/: README.md  index.html
sysbuild/: CMakeLists.txt
sysbuild/mcuboot/: prj.conf
sysbuild/mcuboot/boards/: hifive_premier_p550_mcu.conf  hifive_premier_p550_mcu.overlay  nucleo_f767zi.conf  nucleo_f767zi.overlay
